--- a/MotorcycleRentalService.Infrastructure/MotorcycleRentalService.Infrastructure.csproj
+++ b/MotorcycleRentalService.Infrastructure/MotorcycleRentalService.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MotorcycleRentalService.Domain\MotorcycleRentalService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
