--- a/MotorcycleRentalService.Api/appsettings.json
+++ b/MotorcycleRentalService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Host=localhost;Username=application;Password=post$gres;Database=MotorcycleRentalService"
+  }
 }
