--- a/MotorcycleRentalService.Application/MotorcycleRentalService.Application.csproj
+++ b/MotorcycleRentalService.Application/MotorcycleRentalService.Application.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MotorcycleRentalService.Domain\MotorcycleRentalService.Domain.csproj" />
     <ProjectReference Include="..\MotorcycleRentalService.Infrastructure\MotorcycleRentalService.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
