--- a/MotorcycleRentalService.Infrastructure/MotorcycleRentalService.Infrastructure.csproj
+++ b/MotorcycleRentalService.Infrastructure/MotorcycleRentalService.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MotorcycleRentalService.Domain\MotorcycleRentalService.Domain.csproj" />
   </ItemGroup>
 
