--- a/MotorcycleRentalService.Application/MotorcycleRentalService.Application.csproj
+++ b/MotorcycleRentalService.Application/MotorcycleRentalService.Application.csproj
@@ -7,16 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.Development.json" />
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.5.0-develop.2305" />
+    <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MotorcycleRentalService.Domain\MotorcycleRentalService.Domain.csproj" />
     <ProjectReference Include="..\MotorcycleRentalService.Infrastructure\MotorcycleRentalService.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
