--- a/MotorcycleRentalService.Worker/appsettings.json
+++ b/MotorcycleRentalService.Worker/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Host=localhost;Username=application;Password=post$gres;Database=MotorcycleRentalService"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
